web-infras/parser/tests/fixtures/babel/es2017/async-functions/invalid-escape-sequence-arrow/output.txt
[SyntaxError]: keyword can not contain any esc flag. (1,1)
1|\u0061sync x => { await x }
 |^
